# frieda

./: Cargo.toml  README.md
automata-core/: Cargo.toml
automata-core/src/: alphabet.rs  dag.rs
automata-core/src/alphabet/: propositional.rs
automata-core/src/word/: normalized.rs  repeat.rs  skip.rs
automata-learning/src/active/: lstar.rs  observationtable.rs  oracle.rs
automata-learning/src/passive/: dpainf.rs  precise.rs  sprout.rs
automata-learning/src/passive/sample/: split.rs
automata/src/: automaton.rs  congruence.rs  families.rs  representation.rs  ts.rs
automata/src/automaton/: deterministic.rs  mealy.rs  omega.rs  semantics.rs
automata/src/automaton/omega/: muller.rs  parity.rs
automata/src/congruence/: cayley.rs  class.rs  minimal_representative.rs  transitionprofile.rs
automata/src/families/: convert.rs
automata/src/hoa/: input.rs  output.rs
automata/src/random/: mod.rs
automata/src/ts/: builder.rs  connected_components.rs  deterministic.rs  path.rs  reachable.rs  run.rs  shrinkable.rs  word_as_ts.rs
automata/src/ts/connected_components/: scc.rs
automata/src/ts/impls/: linked.rs  packed.rs
automata/src/ts/operations/: map.rs  product.rs  restricted.rs  reverse.rs
crates/automata/: Cargo.toml
crates/automata-core/src/: lib.rs  math.rs  word.rs
crates/automata-core/src/alphabet/: simple.rs  (+1 more)
crates/automata-learning/: Cargo.toml
crates/automata-learning/src/: active.rs  passive.rs  priority_mapping.rs
crates/automata-learning/src/active/: hypothesis.rs
crates/automata-learning/src/passive/: sample.rs
crates/automata-learning/src/passive/sample/: omega.rs  split.rs
crates/automata-learning/src/passive/sprout/: consistency.rs
crates/automata/src/: automaton.rs  dot.rs  hoa.rs  minimization.rs
crates/hoars/src/: format.rs  header.rs  input.rs  lib.rs
hoars/: Cargo.toml
hoars/src/: body.rs  lib.rs
python/: Cargo.toml
(+26 files in other folders)
