[workspace]
# we use the 2024 edition resolver
resolver = "3"

members = ["crates/*", "bin/*"]
default-members = ["crates/automata", "crates/automata-*", "crates/hoars", "bin/*"]
exclude = ["python", "bench"]

[workspace.dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
biodivine-lib-bdd = "0.5.23"
itertools = "0.14.0"
indexmap = "2.7"
bimap = "0.6"
rand = "0.8.5"
thiserror = "2.0"
crossbeam-channel = "0.5.14"
tabled = { version = "0.16", features = ["ansi"] }
