[package]
name = "automata-learning"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
itertools = { workspace = true }
bimap = { workspace = true }
thiserror = { workspace = true }
crossbeam-channel = { workspace = true }
rand = { workspace = true }
tabled = { workspace = true }

owo-colors = "4.2.0"
alea = "0.2"
either = "1.14.0"
paste = "1.0"
fixedbitset = "0.5.7"

automata = { path = "../automata", features = ["hoa", "render", "graphviz"] }

[features]
default = []

[dev-dependencies]
test-log = { version = "0.2.17", features = ["trace"] }
# [[bin]]
# name = "coal"
# path = "src/bin/coal.rs"
# required-features = ["coal"]

# [[bench]]
# name = "forc_inference"
# harness = false
